# storyscript

./: CMakeLists.txt  Makefile  README  error_adventure.story  lexer.c  parser.c  parser.h  simple_adventure.story  storyscript  storyscript.l  storyscript.y
include/: ast.h  codegen.h  lexer.h  parser.h  token.h
src/: lexer.cpp  main.cpp  parser.cpp  token.cpp
tests/: simple_adventure.story
